fixed left alignment of my trips title

--- a/src/pages/my-trips/MyTrips.scss
+++ b/src/pages/my-trips/MyTrips.scss
@@ -1,11 +1,16 @@
 
 #my-trips-container {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    row-gap: 40px;
+    display: grid;
     margin-left: 10px;
     margin-right: 10px;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: space-between;
+    row-gap: 40px;
+    column-gap: 20px;
+}
+
+#my-trips-title {
+    margin-left: 10px;
 }
 
 @media(min-width: 768px) {
@@ -29,5 +34,8 @@
         justify-content: space-between;
         row-gap: 40px;
         column-gap: 20px;
+    }
+    #my-trips-title {
+        margin-left: 0px;
     }
 }
